--- a/style.css
+++ b/style.css
@@ -42,50 +42,52 @@ header{
     cursor: pointer;
 }
 .starti {
-    background: url(img/ch.png) center/cover no-repeat;
+    background: url(img/home1.png) center/cover no-repeat;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 600px;
     object-fit: contain;
     color: #f8f8f5;
-    text-align: center;
+    text-align: left;
     line-height: 10px;
     font-size: larger;
 }
 .explore-more{
     max-width: 520px;
-    margin: 0;
-    padding: 50px 100px;
-    background: rgba(255, 248, 252, 0.70);
+    margin-left: 15%;
+    background:none;
     border-radius: 18px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.10);
+    box-shadow: none;
     text-align: center;
 }
 .explore-more * {
-    line-height: 1.2;
+    line-height: 1.3;
 }
 .explore-more h3{
     margin: 0 0 8px;
     text-transform: uppercase;
     letter-spacing: 0.18em;
-    font-size: 13px;
+    font-size: 16px;
     color: #C14279;
 }
 .explore-more h1{
     margin: 0 0 10px;
-    font-size: 40px;
+    font-size: 56px;
     line-height: 1.2;
     color: #C14279;
+    font-weight: 800;
 }
 .explore-more p{
     margin: 0 0 18px;
-    font-size: 16px;
+    font-size: 20px;
     color: #555;
+    font-style: italic;
+    max-width: 440px;
 }
 .starti button{
     padding: 10px 28px;
-    background: linear-gradient(135deg, #C14279, #EFA4C8);
+    background-color: #C14279;
     border: none;
     border-radius: 999px;
     font-size: 16px;
