--- a/style.css
+++ b/style.css
@@ -105,3 +105,140 @@ header{
     transform: translateY(-1px);
     box-shadow: 0 8px 18px rgba(0,0,0,0.15);
 }
+.sale-section{
+    padding: 60px 8%;
+}
+.sale-header{
+    text-align: center;
+    margin-bottom: 28px;
+}
+.sale-header h2{
+    color: #C14279;
+    font-size: 30px;
+    margin-bottom: 8px;
+}
+.sale-header p{
+    margin: 0;
+    font-size: 15px;
+    color: #555;
+}
+.sale-slider{
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    max-width: 820px;
+    margin: 0 auto;
+}
+.slides-wrapper{
+    overflow: hidden;
+    flex: 1;
+}
+.slide{
+    display: none;
+    grid-template-columns: 55% 45%;
+    gap: 22px;
+    align-items: center;
+    background-color: #FFF8FC;
+    border-radius: 22px;
+    padding: 28px 34px;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.06);
+}
+.slide.active{
+    display: grid;
+}
+.slide-text{
+    text-align: left;
+}
+.slide-text h3{
+    font-size: 24px;
+    margin: 6px 0 8px;
+    color: #C14279;
+}
+.slide-text .price-row{
+    margin: 10px 0 8px;
+}
+.price-row{
+    display: flex;
+    align-items: baseline;
+    gap: 8px;
+}
+.old-price{
+    font-size: 13px;
+    color: #999;
+    text-decoration: line-through;
+}
+.slide-btn {
+    border: none;
+    background-color: #ffffff;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.12s ease, box-shadow 0.12s ease;
+}
+.slide-btn:hover{
+    transform: translateY(-1px);
+    box-shadow: 0 8px 20px rgba(0,0,0,0.18);
+}
+.view-more-sales{
+    text-align: center;
+    margin-top: 22px;
+}
+.view-more-sales a{
+    font-size: 15px;
+    color: #C14279;
+    text-decoration: none;
+    font-weight: 600;
+    transition: 0.2s ease;
+}
+.view-more-sales a:hover{
+    color: #a32f63;
+    text-decoration: underline;
+}
+.badge{
+    display: inline-block;
+    background-color: #C14279;
+    color: #fff;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing:0.12em ;
+    padding: 6px 12px;
+    border-radius: 999px;
+}
+.slide-cta{
+    display: inline-block;
+    margin-top: 6px;
+    padding: 9px 22px;
+    border-radius: 999px;
+    border: none;
+    background-color: #C14279;
+    color: #fff;
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: 600;
+    cursor: pointer;
+    transition: transform 0.15 ease , box-shadow 0.15 ease;
+}
+.slide-cta:hover{
+    box-shadow: 0 8px 18px rgba(0,0,0,0.15);
+    transform: translateY(-1px);
+}
+.slide-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.slide-image img{
+    width: auto;
+    max-width: 100%;
+    max-height: 320px;
+    object-fit: cover;
+    border-radius: 18px;
+}
