--- a/login.css
+++ b/login.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 body{
     background-color: #F8D8E8;
     font-family: 'Verdana' , sans-serif;
@@ -17,6 +13,7 @@ header{
     align-items: center;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
 }
+
 .nav-right{
     display: flex;
     flex-direction: row;
@@ -54,7 +51,7 @@ header{
 .signup{
     max-width: 420px;
     width: 100%;
-    margin: 40px 60px;
+    margin: 100px 60px;
     color: #C14279;
     padding: 40px 60px;
     display: flex;
@@ -65,7 +62,7 @@ header{
     border-radius: 10px;
 }
 .signup h1{
-    border-radius: 6px;
+    border-radius: px;
     color: #C14279;
     padding: 10px;
     border: #ffc5e2;
@@ -104,93 +101,4 @@ header{
 .signup-button:hover{
     transform: translateY(-1px);
     box-shadow: 0 8px 18px rgba(0,0,0,0.12);
-}
-.footer{
-    background-color: #FFF8FC;
-    padding: 60px 8%;
-    margin-top: 0;
-    text-align: center;
-}
-.footer-newsletter h3{
-    font-size: 22px;
-    font-weight: 700;
-    color: #C14279;
-    margin-bottom: 6px;
-}
-.footer-newsletter p{
-    font-size: 14px;
-    color: #777;
-    margin-bottom: 20px;
-}
-.newsletter-form{
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-.newsletter-form input{
-    padding: 12px 16px;
-    width: 260px;
-    border-radius: 999px;
-    border: 1px solid #ccc;
-    outline: none;
-}
-.newsletter-form button{
-    padding: 12px 24px;
-    border-radius: 999px;
-    background-color: #C14279;
-    color: #fff;
-    border: none;
-    font-weight: 600;
-    cursor: pointer;
-}
-.newsletter-form button:hover{
-    background-color: #a32f63;
-}
-.footer-nav{
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    gap: 80px;
-    flex-wrap: wrap;
-}
-.footer-column h4{
-    font-size: 15px;
-    color: #C14279;
-    margin-bottom: 14px;
-    font-weight: 700;
-}
-.footer-column a{
-    display: block;
-    text-decoration: none;
-    font-size: 14px;
-    color: #777;
-    margin-bottom: 8px;
-    transition:0.2s;
-}
-.footer-column a:hover{
-    color: #C14279;
-}
-.social-links{
-    display: flex;
-    gap: 12px;
-    justify-content: center;
-}
-.social-links img{
-    width: 22px;
-    height: 22px;
-    opacity: 0.8;
-    transition: 0.2s;
-}
-.social-links img:hover{
-    opacity: 1;
-    transform: scale(1.07);
-}
-.footer-bottom{
-    margin-top: 40px;
-    padding-top: 15px;
-    border-top: 1px solid #eee;
-}
-.footer-bottom p{
-    font-size: 13px;
-    color: #999;
 }
