--- a/menufooter.css
+++ b/menufooter.css
@@ -6,7 +6,7 @@ body{
     background-color: #F8D8E8;
     font-family: 'Verdana' , sans-serif;
 }
-header{
+.header{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -16,18 +16,25 @@ header{
     padding: 12px 40px;
     align-items: center;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+    position: sticky;
+    top: 0;
+    z-index: 9999;
+    backdrop-filter: blur(6px);
 }
 .nav-right{
     display: flex;
     flex-direction: row;
     gap: 27px;
     color: black;
+    align-items: center;
 }
 .nav-right a{
     color: black;
     text-decoration: none;
     font-size: 15px;
     font-weight: 500;
+    height: 40px; 
+    line-height: 40px; 
 }
 .nav-right a:hover{
     color: #C14279;
@@ -143,7 +150,7 @@ header{
     }
 }
 @media (max-width:600px){
-    header{
+    .header{
         padding: 12px 16px;
         justify-content: space-between;
     }
