--- a/menufooter.css
+++ b/menufooter.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-color: #F8D8E8;
+    background-color: #FFF8FC;
     font-family: 'Verdana' , sans-serif;
 }
 .header{
