--- a/style2.css
+++ b/style2.css
@@ -335,3 +335,14 @@
     font-size: 13px;
     color: #999;
 }
+.pink-line{
+    width:100%;
+    height:4px;
+    background-color:rgba(196,55,112,0.5);
+    margin:50px 0;
+}
+.product-link{
+  display:block;
+  text-decoration:none;
+  color:inherit;
+}
