--- a/style2.css
+++ b/style2.css
@@ -346,3 +346,15 @@
   text-decoration:none;
   color:inherit;
 }
+.product-link,
+.product-link:visited,
+.product-link:hover,
+.product-link:active{
+  text-decoration: none !important;
+  color: inherit !important;
+}
+
+.product-link *{
+  text-decoration: none !important;
+  color: inherit !important;
+}
